# kithtrust

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml  deploy.yml
contracts/: Cargo.toml
contracts/governance/: Cargo.toml
contracts/governance/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/governance/test_snapshots/test/: test_add_parent_and_child.1.json  test_double_initialize_fails.1.json  test_duplicate_child_fails.1.json  test_initialize_and_roles.1.json  test_invalid_allowance_amount.1.json  test_pause_blocks_authorization.1.json  test_remove_child.1.json  test_set_allowance_and_authorization.1.json
contracts/vault/: Cargo.toml
contracts/vault/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/vault/test_snapshots/test/: test_claim_with_balance.1.json  test_double_initialize_fails.1.json  test_emergency_withdraw.1.json  test_emergency_withdraw_no_funds.1.json  test_initialize_and_deposit.1.json  test_multiple_deposits.1.json  test_negative_deposit_amount.1.json  test_query_default_values.1.json
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/src/__tests__/: setup.ts
frontend/src/__tests__/components/: dashboard.test.tsx  transaction-center.test.tsx  wallet-button.test.tsx
frontend/src/__tests__/features/: utils.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: constants.ts  logger.ts  stellar.ts  utils.ts
scripts/: deploy-local.sh  deploy.sh  initialize.sh  upgrade.sh
(+21 files in other folders)
