# See https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "governance",
    "vault",
]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[patch.crates-io]
ed25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek.git", package = "ed25519-dalek", tag = "ed25519-2.2.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
